syntax = "proto3";
package dto;


message Bot{
    int64 bot_id = 1;
    bool is_online = 2;
    Captcha captcha = 3;
    message Captcha{
        int64 bot_id = 1;
        CaptchaType captcha_type = 2;
        oneof data{
            string url = 3;
            bytes image = 4;
        }
        enum CaptchaType{
            PIC_CAPTCHA = 0;
            SLIDER_CAPTCHA = 1;
            UNSAFE_DEVICE_LOGIN_VERIFY = 2;
            SMS = 4;
        }
    }
}

// 创建机器人 /bot/create/v1/
message CreateBotReq{
    int64 bot_id = 1;
    string password = 2;
    int64 device_seed = 3; // 设备信息随机种子
    int32 client_protocol = 4; // 协议类型
}
message CreateBotResp{
}

// 删除机器人 /bot/delete/v1/
message DeleteBotReq{
    int64 bot_id = 1;
}
message DeleteBotResp{
}

// 查询机器人 /bot/list/v1/
message ListBotReq{
}
message ListBotResp{
    repeated Bot bot_list = 1;
}

// 处理验证码 /captcha/solve/v1/
message SolveCaptchaReq{
    int64 bot_id = 1;
    string result = 2;
}
message SolveCaptchaResp{
}

// 获取二维码 /qrcode/fetch/v1/
message FetchQRCodeReq{
    int64 device_seed = 1;
    int32 client_protocol = 2; // 协议类型
}
// 查询二维码状态 /qrcode/query/v1/
message QueryQRCodeStatusReq{
    bytes sig = 1;
    int64 bot_id = 2;
}
// 二维码登陆响应（获取和查询统一）
message QRCodeLoginResp{
    QRCodeLoginState state = 1;
    bytes image_data = 2;
    bytes sig = 3;
    enum QRCodeLoginState{
        Unknown = 0;
        QRCodeImageFetch = 1;
        QRCodeWaitingForScan = 2; // 等待扫描
        QRCodeWaitingForConfirm = 3; // 扫码成功，请确认登陆
        QRCodeTimeout = 4; // 二维码过期
        QRCodeConfirmed = 5; // 已确认登陆
        QRCodeCanceled = 6; // 扫码被用户取消
    }
}


message Plugin{
    string name = 1;
    bool disabled = 2;
    bool json = 3;
    repeated string urls = 4;
    repeated int32 event_filter = 5;
    repeated int32 api_filter = 6;
    string regex_filter = 7;
    string regex_replace = 8;
    repeated Header extra_header = 9;
    message Header{
        string key = 1;
        repeated string value = 2;
    }
}

message ListPluginReq{
}
message ListPluginResp{
    repeated Plugin plugins = 1;
}

message SavePluginReq{
    Plugin plugin = 1;
}
message SavePluginResp{
}

message DeletePluginReq{
    string name = 1;
}
message DeletePluginResp{
}


service HttpService{
    rpc CreateBot(CreateBotReq)returns (CreateBotResp);
    rpc DeleteBot(DeleteBotReq)returns (DeleteBotResp);
    rpc ListBot(ListBotReq)returns (ListBotResp);
    rpc SolveCaptcha(SolveCaptchaReq)returns (SolveCaptchaResp);
    rpc FetchQRCode(FetchQRCodeReq)returns (QRCodeLoginResp);
    rpc QueryQRCodeStatus(QueryQRCodeStatusReq)returns (QRCodeLoginResp);

    rpc ListPlugin(ListPluginReq)returns (ListPluginResp);
    rpc SavePlugin(SavePluginReq)returns (SavePluginResp);
    rpc DeletePlugin(DeletePluginReq)returns (DeletePluginResp);
}
